<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header android:fragment="be.groept.emedialab.preferences.PreferenceActivity$PrefsFragmentPatternSize"
        android:icon="@drawable/ic_straighten_white_24dp"
        android:title="@string/preference_header_pattern_size_title"
        android:summary="@string/preference_header_pattern_size_summary" />

    <header android:icon="@drawable/ic_camera_white_24dp"
        android:title="@string/preference_header_camera_title"
        android:summary="@string/preference_header_camera_summary">
        <intent android:action="android.intent.action.VIEW"
            android:data="https://google.com"/>
    </header>

    <header android:fragment="be.groept.emedialab.preferences.PreferenceActivity$PrefsFragmentDebug"
        android:icon="@drawable/ic_bug_report_white_24dp"
        android:title="@string/preference_header_debug_title"
        android:summary="@string/preference_header_debug_summary">
        <intent android:action="android.intent.action.VIEW"
            android:data="http://www.android.com" />
    </header>

</preference-headers>