<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="be.groept.emedialab.util.Calibration">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/angleView"
        android:layout_marginTop="37dp"
        android:text="@string/CalibrateOwnPosition"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CalibrateButton"
        android:id="@+id/button"
        android:layout_marginBottom="53dp"
        android:clickable="true"
        android:enabled="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/feedbackText"
        android:password="false"
        android:text="@string/CalibrateFeedback"
        android:layout_below="@+id/angleView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp" />

    <be.groept.emedialab.util.CircularSeekBar
        android:id="@+id/circularSeekBar1"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:padding="0dp"
        app:start_angle="270"
        app:end_angle="270"
        app:use_custom_radii="true"
        app:progress="25"
        app:max="100"
        app:pointer_color="#0174DF"
        app:pointer_halo_color="#880174DF"
        android:layout_alignTop="@+id/feedbackText"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
